--- a/Index.html
+++ b/Index.html
@@ -1,417 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wisata Kabupaten Kuningan</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-        }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Wisata Kabupaten Kuningan</title>
 
-        .banner {
-            position: relative;
-            width: 100%;
-            height: 80vh;
-            min-height: 420px;
+<link rel="stylesheet" href="nav.css">
 
-            background-image: url("nb.jpg");
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+<style>
 
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            overflow: hidden;
-        }
+* {
+margin: 0;
+padding: 0;
+box-sizing: border-box;
+font-family: "Segoe UI", sans-serif;
+}
 
-        .banner::before {
-            content: "";
-            position: absolute;
-            inset: 0;
-            background: linear-gradient(
-                to right,
-                rgba(0, 0, 0, 0.75),
-                rgba(0, 0, 0, 0.45)
-            );
-            z-index: 1;
-        }
+body {
+background-color: darkgrey;
+}
 
-        .banner-content {
-            position: relative;
-            z-index: 2;
-            color: #ffffff;
-            text-align: center;
-            padding: 20px;
-            max-width: 900px;
-            animation: slideFade 1.2s ease;
-        }
+.banner {
+position: relative;
+width: 100%;
+height: 80vh;
+min-height: 420px;
+background-image: url("nb.jpg");
+background-size: cover;
+background-position: center;
+display: flex;
+align-items: center;
+justify-content: center;
+}
 
-        .banner-content h1 {
-            font-size: 3.2rem;
-            margin-bottom: 15px;
-            font-weight: 700;
-            letter-spacing: 1px;
-        }
+.banner::before {
+content: "";
+position: absolute;
+inset: 0;
+background: linear-gradient(to right, rgba(0,0,0,0.75), rgba(0,0,0,0.45));
+}
 
-        .banner-content p {
-            font-size: 1.15rem;
-            line-height: 1.8;
-            opacity: 0.95;
-        }
+.banner-content {
+position: relative;
+color: white;
+text-align: center;
+animation: slideFade 1.2s ease;
+}
 
-        .banner-btn {
-            display: inline-block;
-            margin-top: 30px;
-            padding: 14px 36px;
-            border-radius: 50px;
-            background-color: #2e7d32;
-            color: #ffffff;
-            text-decoration: none;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
+.banner-content h1 {
+font-size: 3rem;
+margin-bottom: 15px;
+}
 
-        .banner-btn:hover {
-            background-color: #1b5e20;
-            transform: translateY(-4px);
-        }
+@keyframes slideFade {
+from { opacity: 0; transform: translateY(40px); }
+to { opacity: 1; transform: translateY(0); }
+}
 
-        @keyframes slideFade {
-            from {
-            opacity: 0;
-            transform: translateY(40px);
-            }
-            to {
-            opacity: 1;
-            transform: translateY(0);
-            }
-        }
+.navbar {
+position: fixed;
+top: 0;
+width: 100%;
+padding: 16px 40px;
+display: flex;
+justify-content: space-between;
+align-items: center;
+background: transparent;
+transition: 0.4s;
+z-index: 1000;
+}
 
-        @media (max-width: 992px) {
-            .banner {
-            height: 65vh;
-            }
+.navbar.scrolled {
+background: rgba(0,0,0,0.9);
+}
 
-            .banner-content h1 {
-            font-size: 2.6rem;
-            }
-        }
+.nav-menu {
+display: flex;
+list-style: none;
+gap: 30px;
+}
 
-        @media (max-width: 768px) {
-            .banner {
-            height: 55vh;
-            min-height: 320px;
-            }
+.nav-menu a {
+color: white;
+text-decoration: none;
+}
 
-            .banner-content h1 {
-            font-size: 2.1rem;
-            }
+.nav-toggle {
+display: none;
+font-size: 1.8rem;
+color: white;
+cursor: pointer;
+}
 
-            .banner-content p {
-            font-size: 1rem;
-            }
-        }
+@media (max-width: 768px) {
+.nav-toggle { display: block; }
 
-        @media (max-width: 480px) {
-            .banner {
-            height: 50vh;
-            min-height: 280px;
-            }
+.nav-menu {
+position: absolute;
+top: 70px;
+right: 0;
+width: 100%;
+height: 0;
+overflow: hidden;
+flex-direction: column;
+background: rgba(0,0,0,0.95);
+transition: 0.4s;
+}
 
-            .banner-content h1 {
-            font-size: 1.7rem;
-            }
+.nav-menu.active {
+height: 250px;
+padding-top: 20px;
+}
+}
 
-            .banner-btn {
-            padding: 10px 24px;
-            font-size: 14px;
-            }
-        }
+.container {
+padding: 20px;
+text-align: center;
+background: #1b5e20;
+color: white;
+}
 
-        .container {
-            padding: 20px;
-            text-align: center;
-            background-color: #1b5e20;
-            background-size: cover;
-            color: white;
-        }
+.wisata {
+margin-top: 20px;
+background: #f4f4f4;
+color: black;
+padding: 15px;
+border-radius: 8px;
+}
 
-        select {
-            padding: 10px;
-            font-size: 16px;
-        }
+.wisata img {
+width: 100%;
+max-width: 500px;
+border-radius: 8px;
+}
 
-        .wisata {
-            margin-top: 20px;
-            background-color: #f4f4f4;
-            padding: 15px;
-            border-radius: 8px;
-            box-shadow: 0 0 5px rgba(0,0,0,0.2);
-            color: black;
-            font-size: medium;
-        }
-
-        .wisata img {
-            width: 100%;
-            max-width: 500px;
-            border-radius: 8px;
-        }
-
-        footer {
-            margin-top: 10px;
-            background-color: #1b5e20;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            border-bottom-left-radius: 50px;
-            border-top-right-radius: 50px;
-        }
-
-        body {
-            margin: 0;
-            background-color: darkgrey;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Segoe UI", sans-serif;
-        }
-
-        .navbar {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            padding: 16px 40px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            z-index: 1000;
-
-            background: transparent;
-            transition: 0.4s ease;
-        }
-
-        .navbar.scrolled {
-            background: rgba(0, 0, 0, 0.9);
-            box-shadow: 0 4px 10px rgba(0,0,0,0.4);
-        }
-
-        .nav-logo {
-            font-size: 1.6rem;
-            font-weight: 700;
-            color: #ffffff;
-            text-decoration: none;
-        }
-
-        .nav-menu {
-            display: flex;
-            list-style: none;
-            gap: 30px;
-        }
-
-        .nav-menu li {
-            position: relative;
-        }
-
-        .nav-menu a {
-            text-decoration: none;
-            color: #ffffff;
-            font-size: 1rem;
-            font-weight: 500;
-            transition: 0.3s;
-        }
-
-        .nav-menu a:hover {
-            color: #4caf50;
-        }
-
-        .dropdown {
-            display: none;
-            position: absolute;
-            top: 40px;
-            left: 0;
-            background: rgba(0,0,0,0.9);
-            border-radius: 6px;
-            min-width: 200px;
-        }
-
-        .dropdown a {
-            display: block;
-            padding: 12px 16px;
-            font-size: 0.95rem;
-        }
-
-        .nav-menu li:hover .dropdown {
-            display: block;
-        }
-
-        .nav-toggle {
-            display: none;
-            font-size: 1.8rem;
-            color: #ffffff;
-            cursor: pointer;
-        }
-
-
-        @media (max-width: 768px) {
-            .navbar {
-            padding: 14px 24px;
-            }
-
-            .nav-toggle {
-            display: block;
-            }
-
-        .nav-menu {
-            position: absolute;
-            top: 70px;
-            right: 0;
-            width: 100%;
-            height: 0;
-            overflow: hidden;
-
-            flex-direction: column;
-            align-items: center;
-            background: rgba(0,0,0,0.95);
-            transition: height 0.4s ease;
-        }
-
-        .nav-menu.active {
-            height: 300px;
-            padding-top: 20px;
-        }
-
-        .nav-menu li:hover .dropdown {
-            display: none;
-        }
-
-        .dropdown {
-            position: static;
-            background: none;
-        }
-        }
-
-        .nav-left {
-            display: flex;
-            align-items: center;
-            gap: 14px;
-        }
-
-        .nav-clock {
-            color: #4caf50;
-            font-size: 0.95rem;
-            font-weight: 600;
-            padding: 4px 10px;
-            border-radius: 6px;
-            background: rgba(0, 0, 0, 0.4);
-            letter-spacing: 1px;
-        }
-        
-        @media (max-width: 768px) {
-            .nav-clock {
-                font-size: 0.85rem;
-            }
-        }
-
-
-        .content{
-            width: 900px;
-            padding: 20px;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: white;
-        }
-        .active{
-            background-color: #1b5e20;
-        }
-    </style>
+footer {
+background: #1b5e20;
+color: white;
+padding: 10px;
+text-align: center;
+margin-top: 10px;
+}
+</style>
 </head>
 
 <body>
 
-    <link rel="stylesheet" href="nav.css">
+<nav class="navbar" id="navbar">
+<span style="color:white;font-weight:bold;">Kuningan</span>
+<div class="nav-toggle" onclick="toggleMenu()">☰</div>
 
-    <nav class="navbar" id="navbar">
-    <div class="nav-left">
-        <span class="nav-logo">Kuningan</span>
-        <span class="nav-clock" id="clock">00:00:00</span>
-    </div>
+<ul class="nav-menu" id="navMenu">
+<li><a href="Index.html" class="active">Home</a></li>
+<li><a href="Profile.html">Profile</a></li>
+<li><a href="Gallery.html">Gallery</a></li>
+<li><a href="Contact.html">Contact</a></li>
+</ul>
+</nav>
 
-    <div class="nav-toggle" onclick="toggleMenu()">☰</div>
+<section class="banner">
+<div class="banner-content">
+<h1>Selamat Datang di Wisata Kabupaten Kuningan</h1>
+<p>Jelajahi Keindahan Alam Kuningan</p>
+</div>
+</section>
 
-    <ul class="nav-menu" id="navMenu">
-        <li><a href="Index.html" class="active">Home</a></li>
-        <li><a href="Profile.html">Profile</a></li>
-        <li><a href="Gallery.html">Gallery</a></li>
-        <li><a href="Contact.html">Contact</a></li>
-    </ul>
-    </nav>
+<div class="container">
+<h2>Pilih Tempat Wisata</h2>
 
-    <script>
-    function updateClock() {
-    const now = new Date();
-    let hours = now.getHours().toString().padStart(2, '0');
-    let minutes = now.getMinutes().toString().padStart(2, '0');
-    let seconds = now.getSeconds().toString().padStart(2, '0');
+<select onchange="pilihWisata(this.value)">
+<option value="">-- Pilih Wisata --</option>
+<option value="ciremai">Gunung Ciremai</option>
+<option value="linggarjati">Linggarjati</option>
+<option value="sangkanhurip">Sangkanhurip</option>
+<option value="waduk">Waduk Darma</option>
+<option value="talaga">Talaga Biru Cicerem</option>
+</select>
 
-    document.getElementById("clock").innerText =
-        hours + ":" + minutes + ":" + seconds;
-    }
+<div id="hasil" class="wisata"></div>
+</div>
 
-    setInterval(updateClock, 1000);
-    updateClock();
+<footer>
+<p>&copy; Deden_Wijaya - 2026</p>
+</footer>
 
-    function toggleMenu() {
-    document.getElementById("navMenu").classList.toggle("active");
-    }
+<script>
+function toggleMenu() {
+document.getElementById("navMenu").classList.toggle("active");
+}
 
-    function closeMenu() {
-    document.getElementById("navMenu").classList.remove("active");
-    }
+window.addEventListener("scroll", () => {
+document.getElementById("navbar")
+.classList.toggle("scrolled", window.scrollY > 50);
+});
 
-    window.addEventListener("scroll", function () {
-    document.getElementById("navbar")
-        .classList.toggle("scrolled", window.scrollY > 50);
-    });
-    </script>
+function pilihWisata(wisata) {
+let hasil = document.getElementById("hasil");
 
+if (wisata === "ciremai") {
+hasil.innerHTML = `
+<h3>Gunung Ciremai</h3>
+<img src="Gunung_Ciremai.jpg">
+<p>Gunung Ciremai adalah gunung tertinggi di Jawa Barat.</p>`;
+}
 
+else if (wisata === "linggarjati") {
+hasil.innerHTML = `
+<h3>Linggarjati</h3>
+<img src="linggar.jpg">
+<p>Wisata alam dan sejarah Perundingan Linggarjati.</p>`;
+}
 
-    <section class="banner">
-        <div class="banner-content">
-            <h1>Selamat Datang di Wisata Kabupaten Kuningan</h1>
-            <p>
-            Jelajahi Keindahan Alam Kuningan
-            </p>
-        </div>
-    </section>
+else if (wisata === "sangkanhurip") {
+hasil.innerHTML = `
+<h3>Sangkanhurip</h3>
+<img src="sangkan.jpg">
+<p>Pemandian air panas alami.</p>`;
+}
 
-    <div class="container">
-        <h2>Pilih Tempat Wisata</h2>
+else if (wisata === "waduk") {
+hasil.innerHTML = `
+<h3>Waduk Darma</h3>
+<img src="waduk.jpg">
+<p>Danau buatan dengan panorama indah.</p>`;
+}
 
-        <select onchange="pilihWisata(this.value)">
-            <option value="">-- Pilih Wisata --</option>
-            <option value="ciremai">Gunung Ciremai</option>
-            <option value="linggarjati">Linggarjati</option>
-            <option value="sangkanhurip">Sangkanhurip</option>
-            <option value="waduk">Waduk Darma</option>
-            <option value="talaga">Talaga Biru Cicerem</option>
-        </select>
+else if (wisata === "talaga") {
+hasil.innerHTML = `
+<h3>Talaga Biru Cicerem</h3>
+<img src="telaga.jpg">
+<p>Air jernih kebiruan yang eksotis.</p>`;
+}
 
-        <div id="hasil" class="wisata"></div>
-    </div>
-
-    <footer>
-        <p>&copy; Deden_Wijaya - 2026</p>
-    </footer>
+else {
+hasil.innerHTML = "";
+}
+}
+</script>
 
 </body>
 </html>
-
-
